src/components/projectDiv/ProjectDiv.css
.project-div {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid var(--color-softlavender);
  border-radius: 20px;

  z-index: 10;
  max-width: 400px;
  position: relative;

}
.new-badge {
  position: absolute;
  top: 10px;
  right: 10px;

  background: linear-gradient(
    120deg,
    var(--color-coral),
    var(--color-darkblue)
  );
  color: var(--color-coral);
  font-size: 12px;
  padding: 4px 12px;
  border-radius: 20px;
  pointer-events: none;
  text-align: center;
  font-family: var(--font-body);
}
/* Title */
.project-title {
  font-weight: normal;
  text-align: center;
  margin: 15px 0 10px;
  font-family: var(--font-heading);
}
/* Image */
.project-image {
  width: 90%;
  display: flex;
  justify-content: center;
  margin-bottom: 1rem;
  transition: transform 0.3s ease-in-out;

  position: relative;
}
.project-image img {
  aspect-ratio: 3.5/2;
  width: 100%;
  cursor: pointer;
  border-radius: 10px;
  object-fit: cover;
}
.project-image:hover {
  transform: scale(1.04);
}
/* Image Hover Overlay */
.play {
  position: absolute;
  top: 50%;
  left: 50%;
  visibility: hidden;
  cursor: pointer;
  transform: translate(-50%, -50%);
  transition: opacity 0.3s ease-in-out;
}
.play-icon {
  font-size: 55px;
  color: var(--color-coral);
  border: 5px solid rgba(255, 255, 255, 0.5);
  border-radius: 50%;
}
.project-image:hover .play {
  visibility: visible;
  opacity: 1;
}
.project-image:hover img {
  opacity: 0.5;
  filter: blur(1px);
  transition: opacity 0.2s ease-in;
}

/* Descriptions */
.project-descriptions {
  width: 100%;
  height: 40%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 1rem;
}

/* TechStack */
.project-descriptions .techStack span {
  color: var(--color-coral);
}
.techStack {
  display: flex;
  align-items: center;
  text-align: left;
  align-self: flex-start;
  margin: 0 1.3rem 0.2rem;
  font-family: var(--font-heading);
  font-size: 1.4rem;
  gap: 8px;
  padding: 2px;
}
.techstackIcon {
  display: flex;
  gap: 4px;
}
.techstackIcon svg {
  width: 24px;
  height: 24px;
}

.project-descriptions .desc {
  font-weight: 600;
  text-align: justify;
  margin: 0 1.3rem 0.8rem;
  font-family: var(--font-body);
  letter-spacing: 0.04em;
  font-size: 0.9rem;
  opacity: 0.8;
}
/* Buttons */
.projects-buttons {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: auto;
}
.project-btn {
  font-size: 1.2rem;
  padding: 0.5rem 0.75rem;
  gap: 5px;
  border-radius: 25px;
  color: var(--color-darkblue);
  margin: 0 1.5rem;
  font-family: var(--font-heading);
  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
}
.project-btn:hover {
  cursor: pointer;
  background-color: var(--color-coral);
  color: white;
}
@media screen and (max-width: 900px) {
  .project-div {
    margin: 1rem 0;
    width: 90%;
  }
  .project-title {
    font-size: 1.8rem;
  }
}
@media screen and (max-width: 600px) {
  .project-div {
    margin: 1rem 0;
    min-width: 100%;
  }
  .project-title {
    font-size: 1.5rem;
  }
  .projects-buttons {
    width: 90%;
    gap: 10px;
    align-items: center;
  }
  .project-btn {
    margin: 0.5rem 0;
    width: 50%;
  }
}

